# TakoVM

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.server  LICENSE  LIMITATIONS.md  NOTICE  README.md  ROADMAP.md  SPEC.md  api_server.py  demo.sh  dev-requirements.txt  docker-compose.yaml  job_types.json  lima-gvisor.yaml  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  run_server.py  setup.sh  tako_vm.py  tako_vm.yaml.example  worker.py
.claude/: settings.json
.claude/hooks/: lint.sh
.github/: CODEOWNERS
.github/workflows/: docs.yml  lint.yml  pylint.yml  release.yml  test.yml
config/: seccomp-default.json
custom_libs/example_lib/: __init__.py  setup.py
docker/: Dockerfile.executor  Dockerfile.server  entrypoint.sh
docs/: architecture.md  comparison.md  index.md
docs/api/: rest.md  sdk.md
docs/deployment/: how-to-deploy.md  operations.md  production.md  scaling.md  security.md
docs/design/: dind-support.md
docs/development/: troubleshooting.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: async-jobs.md  authentication.md  basic-execution.md  custom-libraries.md  environments.md  error-handling.md  filesystem-and-caches.md  tutorial.md
docs/security/: README.md  SOLUTIONS.md  env-var-mitigation.md  honest-assessment.md  mitigations.md  proc-exposure-vulnerability.md
docs/strategy/: dashboard-monetization.md  execution-roadmap.md  klavis-analysis.md  monetization.md  opslane-analysis.md  (+4 more)
examples/: 00_sandbox_local_packages.py  00_sandbox_quickstart.py  01_basic_execution.py  02_async_execution.py  03_environments.py  04_with_auth.py  05_error_handling.py  __init__.py  example_api_client.py  example_tako_vm.py
scripts/: quickstart.sh  setup.sh
src/: __init__.py  api_server.py  container_builder.py  job_types.py  worker.py
tako_vm/: __init__.py  apparmor_profile.txt  cli.py  config.py  constants.py  job_types.json  job_types.py  models.py  sandbox.py  seccomp_profile.json  security.py  session.py  storage.py  version.py
tests/: __init__.py  conftest.py  stress_test.py  test_api.py  test_cli.py  test_config.py  test_docker_utils.py  test_job_types.py  test_limits.py  test_models.py  test_postgres_integration.py  test_proc_exposure.py  test_runtime.py  test_sandbox.py  test_sdk_client.py  test_session_runtime.py  test_session_security.py  test_storage.py  test_version.py
(+21 files in other folders)
